<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Forecastr</string>
    <string name="api_key">491c3156-6d59-4e84-8df7-437029417ff7</string>
    <string name="base_url">http://windforecastapi.jameswgrant.co.uk/</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="five_day">5 Day</string>

    <string name="what_else">What else?</string>
    <string name="todo">TODO</string>
    <string name="time1">3:00</string>
    <string name="time2">6:00</string>
    <string name="time3">9:00</string>
    <string name="time4">12:00</string>
    <string name="time5">15:00</string>
    <string name="time6">18:00</string>
    <string name="time7">21:00</string>

    <string name="twitterLink"><a href="https://twitter.com/sproogen">\@sproogen</a></string>
    <string name="websiteLink"><a href="http://jwgmedia.co.uk">jwgmedia.co.uk</a></string>

    <string name="all_favourites">All Favourites</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="check_updates">Check for updates</string>
    <string name="about">About</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

</resources>
