<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/all_favourites" />
    </group>

    <item
        android:id="@+id/favourites"
        android:title="@string/favourites">
        <menu>
            <group
                android:id="@+id/favouritesGroup"
                android:checkableBehavior="single">
            </group>
        </menu>
    </item>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/check_updates"
                android:checkable="false"
                android:title="@string/check_updates" />
            <group
                android:id="@+id/settings"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/about"
                    android:title="@string/about" />
            </group>
        </menu>
    </item>

</menu>